Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47028

QLowEnergyService::discoverDetails() never completes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.1
    • 5.5.1
    • None
    • bluez 5.31

    Description

      About 1 out of every 5 attempts at using the example void Device::connectToService(const QString &uuid) call, and consequently the call to service->discoverDetails();, never completes. It continues to read the same characteristics and descriptors over and over again. Otherwise it works just fine the rest of the time.

      I haven't had any issues reading the descriptors with gatttool repeatedly.

      I have attached two text files with the log output.

      The repeated attempts are separated by: Discovering descriptor values for "

      {669a9001-0008-968f-e311-6050405558b3}

      "
      works.txt & not-working.txt

      Thanks in advance for any insight into this!

      Attachments

        1. not-working.txt
          40 kB
          Kent Williams
        2. works.txt
          7 kB
          Kent Williams
        3. dump_sent.patch
          0.7 kB
          Alex Blasche
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            k3nt Kent Williams
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes